--- a/other-resources.html
+++ b/other-resources.html
@@ -70,7 +70,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-left section-heading probootstrap-animate">
-            <h1>Chem Engineering</h1>
+            <h1>Other Resources</h1>
           </div>
         </div>
       </div>
@@ -85,7 +85,7 @@
             <div class="row probootstrap-gutter0">
               <div class="col-md-4" id="probootstrap-sidebar">
                 <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                  <h3>More Courses</h3>
+                  <h3>Pages</h3>
                   <ul class="probootstrap-side-menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="offers.html">Offers</a></li>
@@ -98,15 +98,8 @@
                 </div>
               </div>
               <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
-                <h2>Description</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime rerum possimus maiores, natus fugiat
-                  quibusdam dolorem. Dolore, odit ipsum, commodi distinctio repellendus vel tempore accusamus ea
-                  assumenda totam aut tempora. Illum sed harum, doloremque magnam nostrum. Fuga tempora corrupti unde
-                  ratione, placeat voluptates dicta asperiores est, ad voluptatem dolor, delectus sapiente voluptatum!
-                  Rerum magnam ducimus voluptas dolorum consectetur ex facilis quaerat sapiente eaque consequuntur
-                  perspiciatis nesciunt tenetur quibusdam corrupti voluptates consequatur repudiandae, quisquam aperiam
-                  veniam. Architecto voluptas blanditiis provident modi cumque a eius nam dignissimos numquam ducimus
-                  earum odit ipsam, reiciendis assumenda id quasi dolore, totam impedit molestias? Alias, ipsa!</p>
+                <h2>Forge Garden</h2>
+                <p>Test :)</p>
                 <p>Velit natus alias eligendi architecto rem, itaque distinctio? Excepturi obcaecati fuga ratione.
                   Dolore in ipsam rem ullam nemo error aperiam dolores eius, doloremque blanditiis placeat fugiat libero
                   id atque, recusandae, voluptate laboriosam, distinctio omnis ab. Eius obcaecati, laudantium ex
@@ -115,16 +108,8 @@
                   velit distinctio, non cumque dolorem delectus quia quibusdam? Amet, consectetur. Reprehenderit unde,
                   eveniet temporibus, quae possimus magni. Dolore quo eveniet, distinctio dicta quisquam? Aliquid libero
                   dolore provident, beatae odit facilis quasi dolorum sit ad minus!</p>
-                <p>Tenetur, soluta natus porro, cumque vitae, iste accusamus beatae repudiandae quidem magnam sunt,
-                  nihil reprehenderit facere eveniet non sint aliquid. Ipsam totam nostrum, modi veritatis quidem
-                  maiores dolor minima incidunt non ratione qui quas, quasi aut sit obcaecati iure. Corporis, rem?
-                  Reprehenderit sequi, tenetur, libero nobis beatae ut doloremque obcaecati ipsa? Itaque numquam ratione
-                  et veniam porro magnam expedita ad laboriosam dolorum debitis omnis mollitia id eum minus
-                  necessitatibus ipsam consequuntur sed tempora assumenda, repudiandae culpa atque? Ad ut porro
-                  praesentium, earum voluptatum maxime, deserunt, omnis dolorem veniam cumque et officia veritatis, nam
-                  perferendis ex facilis sit sapiente at accusamus?</p>
-                <p><a href="#" class="btn btn-primary">Enroll with this course now</a> <span
-                    class="enrolled-count">2,928 students enrolled</span></p>
+                <h2>CalFresh</h2>
+                <p>Beep boop</p>
               </div>
             </div>
           </div>
