--- a/other-resources.html
+++ b/other-resources.html
@@ -152,7 +152,12 @@
           </div>
           <div class="col-md-4">
             <div class="probootstrap-footer-widget">
-              
+              <h3>Contact Info</h3>
+              <ul class="probootstrap-contact-info">
+                <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara CA 95053</span></li>
+                <li><i class="icon-mail"></i><span>broncoshare@scu.edu</span></li>
+                
+              </ul>
             </div>
           </div>
 
