--- a/other-resources.html
+++ b/other-resources.html
@@ -154,7 +154,7 @@
             <div class="probootstrap-footer-widget">
               <h3>Contact Info</h3>
               <ul class="probootstrap-contact-info">
-                <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara CA 95053</span></li>
+                <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara, CA 95053</span></li>
                 <li><i class="icon-mail"></i><span>broncoshare@scu.edu</span></li>
                 
               </ul>
