--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-left section-heading probootstrap-animate">
-            <h1>About The School</h1>
+            <h1>About The Program</h1>
           </div>
         </div>
       </div>
@@ -82,11 +82,15 @@
           <div class="col-md-12">
             <div class="probootstrap-flex-block">
               <div class="probootstrap-text probootstrap-animate">
-                <div class="text-uppercase probootstrap-uppercase">History</div>
-                <h3>Take A Look at How We Begin</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis explicabo veniam labore ratione illo
-                  vero voluptate a deserunt incidunt odio aliquam commodi blanditiis voluptas error non rerum temporibus
-                  optio accusantium!</p>
+                <div class="text-uppercase probootstrap-uppercase">The Problem</div>
+                <h3>Where We Begin</h3>
+                <p>
+                  As a quarter comes to an end, many Broncos with 
+                  extra meal points are faced with a dilemma. Do I
+                  buy into the consumerist culture and waste extra dining
+                  points on packs of Yerba Mate? Or, do I just let
+                  it go to waste?
+                </p>
                 <p><a href="#" class="btn btn-primary">Learn More</a></p>
               </div>
               <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/slider_4.jpg)">
@@ -110,12 +114,8 @@
           </p>
         </div>
         <div class="col-md-6 col-md-push-1">
-          <h2>We are NYC based School focused on excellence.</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis explicabo veniam labore ratione illo vero
-            voluptate a deserunt incidunt odio aliquam commodi blanditiis voluptas error non rerum temporibus optio
-            accusantium!</p>
-          <p>Quis explicabo veniam labore ratione illo vero voluptate a deserunt incidunt odio aliquam commodi
-            blanditiis voluptas error non rerum temporibus optio accusantium!</p>
+          <h2>We actively address food insecurity on campus</h2>
+          <p>Food pantries can only provide certain food items, and it does not provide solution for immediate hunger.</p>
         </div>
 
 
@@ -127,9 +127,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
-            <h2>Why Choose Enlight School</h2>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus
-              quos quibusdam soluta at.</p>
+            <h2>Why Choose Bronco Share</h2>
+            <p class="lead">Get a Benson Meal or something from the Cellar with others' points!</p>
           </div>
         </div>
         <div class="row">
