--- a/calendar.html
+++ b/calendar.html
@@ -83,18 +83,10 @@
           <div class="col-md-12">
             <div class="probootstrap-flex-block">
               <div class="probootstrap-text probootstrap-animate">
-                <div class="text-uppercase probootstrap-uppercase">Featured Events</div>
-                <h3>Students Math Competition for The Year 2017</h3>
-                <p>Quis explicabo veniam labore ratione illo vero voluptate a deserunt incidunt odio aliquam commodi
-                </p>
-                <p>
-                  <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-                  <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn, NYC</span>
-                </p>
-                <p><a href="#" class="btn btn-primary">Learn More</a></p>
-              </div>
-              <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/slider_4.jpg)">
-                <a href="https://vimeo.com/45830194" class="btn-video popup-vimeo"><i class="icon-play3"></i></a>
+                <div class="text-uppercase probootstrap-uppercase">BroncoSec Recommended Events</div>
+                <h3>Community Events</h3>
+                <p>We've collected hours for nearby places where you can buy food around Santa Clara University. The Forge Garden works on a donation-based system, and student offers can help to get food from Benson.</p>
+                <p><a href="other-resources.html" class="btn btn-primary">Learn More</a></p>
               </div>
             </div>
           </div>
@@ -102,102 +94,9 @@
       </div>
     </section>
 
+    <iframe src="https://calendar.google.com/calendar/embed?src=c_osbvtgj4k5vprbocd0dm1lpgbg%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    <iframe src="https://calendar.google.com/calendar/embed?src=k7km3664f0c04d6028io9nm6pk%40group.calendar.google.com&ctz=America%2FLos_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
-
-
-    <section class="probootstrap-section">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
-            <a href="#" class="probootstrap-featured-news-box">
-              <figure class="probootstrap-media"><img src="img/img_sm_1.jpg"
-                  alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-              <div class="probootstrap-text">
-                <h3>Tempora consectetur unde nisi</h3>
-                <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-                <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn, NYC</span>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
-            <a href="#" class="probootstrap-featured-news-box">
-              <figure class="probootstrap-media"><img src="img/img_sm_2.jpg"
-                  alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-              <div class="probootstrap-text">
-                <h3>Tempora consectetur unde nisi</h3>
-                <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-                <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn, NYC</span>
-              </div>
-            </a>
-          </div>
-          <div class="clearfix visible-sm-block visible-xs-block"></div>
-          <div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
-            <a href="#" class="probootstrap-featured-news-box">
-              <figure class="probootstrap-media"><img src="img/img_sm_3.jpg"
-                  alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-              <div class="probootstrap-text">
-                <h3>Tempora consectetur unde nisi</h3>
-                <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-                <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn, NYC</span>
-              </div>
-            </a>
-          </div>
-
-          <div class="clearfix visible-md-block"></div>
-
-          <div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
-            <a href="#" class="probootstrap-featured-news-box">
-              <figure class="probootstrap-media"><img src="img/img_sm_1.jpg"
-                  alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-              <div class="probootstrap-text">
-                <h3>Tempora consectetur unde nisi</h3>
-                <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-                <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn, NYC</span>
-              </div>
-            </a>
-          </div>
-          <div class="clearfix visible-sm-block visible-xs-block"></div>
-
-          <div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
-            <a href="#" class="probootstrap-featured-news-box">
-              <figure class="probootstrap-media"><img src="img/img_sm_2.jpg"
-                  alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-              <div class="probootstrap-text">
-                <h3>Tempora consectetur unde nisi</h3>
-                <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-                <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn, NYC</span>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12 probootstrap-animate">
-            <a href="#" class="probootstrap-featured-news-box">
-              <figure class="probootstrap-media"><img src="img/img_sm_3.jpg"
-                  alt="Free Bootstrap Template by uicookies.com" class="img-responsive"></figure>
-              <div class="probootstrap-text">
-                <h3>Tempora consectetur unde nisi</h3>
-                <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
-                <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn, NYC</span>
-              </div>
-            </a>
-          </div>
-          <div class="clearfix visible-sm-block visible-xs-block"></div>
-
-        </div>
-      </div>
-    </section>
-
-    <section class="probootstrap-cta">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h2 class="probootstrap-animate" data-animate-effect="fadeInRight">Get your admission now!</h2>
-            <a href="#" role="button" class="btn btn-primary btn-lg btn-ghost probootstrap-animate"
-              data-animate-effect="fadeInLeft">Enroll</a>
-          </div>
-        </div>
-      </div>
-    </section>
     <footer class="probootstrap-footer probootstrap-bg">
       <div class="container">
         <div class="row">
