--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BroncoShare</title>
+  <link rel="icon" type="image/png" href="img/favicon.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="img/favicon.png" sizes="32x32">
   <meta name="description" content="Free Bootstrap Theme by uicookies.com">
   <meta name="keywords"
     content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
