--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
               <a href="#" data-toggle="dropdown" class="dropdown-toggle">Additional Resources</a>
               <ul class="dropdown-menu">
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="other-resources.html">Other Organizations</a></li>
+                <li><a href="other-resources.html">Other Resources</a></li>
                 <li><a href="food-insecurity.html">About Food Insecurity</a></li>
               </ul>
             </li>
@@ -220,7 +220,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="offers.html">Offers</a></li>
                 <li><a href="calendar.html">Calendar</a></li>
-                <li><a href="other-resources.html">Additional Resources</a></li>
+                <li><a href="other-resources.html">Other Resources</a></li>
                 <li><a href="new-offer.html">Post an Offer</a></li>
               </ul>
             </div>
