--- a/food-insecurity.html
+++ b/food-insecurity.html
@@ -56,7 +56,7 @@
               <a href="#" data-toggle="dropdown" class="dropdown-toggle">Additional Resources</a>
               <ul class="dropdown-menu">
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="other-resources.html">Other Organizations</a></li>
+                <li><a href="other-resources.html">Other Resources</a></li>
                 <li><a href="food-insecurity.html">About Food Insecurity</a></li>
               </ul>
             </li>
