--- a/new-offer.html
+++ b/new-offer.html
@@ -56,7 +56,7 @@
               <a href="#" data-toggle="dropdown" class="dropdown-toggle">Additional Resources</a>
               <ul class="dropdown-menu">
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="other-resources.html">Other Organizations</a></li>
+                <li><a href="other-resources.html">Other Resources</a></li>
                 <li><a href="food-insecurity.html">About Food Insecurity</a></li>
               </ul>
             </li>
@@ -89,7 +89,7 @@
                     <li><a href="offers.html">Offers</a></li>
                     <li><a href="calendar.html">Calendar</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="other-resources.html">Other Organizations</a></li>
+                    <li><a href="other-resources.html">Additional Resources</a></li>
                     <li><a href="food-insecurity.html">About Food Insecurity</a></li>
                     <li class="active"><a>Post An Offer</a></li>
                   </ul>
