--- a/other-resources.html
+++ b/other-resources.html
@@ -78,26 +78,11 @@
     </section>
 
 
-
     <section class="probootstrap-section probootstrap-section-sm">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="row probootstrap-gutter0">
-              <div class="col-md-4" id="probootstrap-sidebar">
-                <div class="probootstrap-sidebar-inner probootstrap-overlap probootstrap-animate">
-                  <h3>Pages</h3>
-                  <ul class="probootstrap-side-menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="offers.html">Offers</a></li>
-                    <li><a href="calendar.html">Calendar</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li class="active">Other Resources</a></li>
-                    <li><a href="food-insecurity.html">About Food Insecurity</a></li>
-                    <li><a href="new-offer.html">Post An Offer</a></li>
-                  </ul>
-                </div>
-              </div>
               <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
                 <h2><a href="https://www.scu.edu/sustainability/programs/theforge/">Forge Garden Farm Stand</a></h2>
                 <p>The Forge Garden Farm Stand is every Friday:
@@ -110,16 +95,14 @@
                   reserved for SCU students only. The farm stand is held at The Forge Garden except for the
                   first week of the month, it is held as a pop-up at an alternative location.
                 </p>
-                <h2><a href="https://www.scu.edu/sustainability/programs/theforge/recipes/">Forge Garden Recipe Book</a></h2>
-                    <p>A recipe book of healthy food options compiled by the Forge Garden!</p>
-                    <h2><a href="https://www.scu.edu/osl/food-insecurity-program/">SCU Food Insecurity Program</a></h2>
-                          <p>Through the program, students have the opportunity to gain access to the Bronco Pantry, donated gift cards to local stores, and are offered individual consultation sessions to gain access to additional community resources. The Bronco Pantry regularly stocks non-perishable food items and fresh produce in partnership with the SCU Forge Garden.</p>
+                <h2><a href="https://www.scu.edu/osl/food-insecurity-program/">SCU Food Insecurity Program</a></h2>
+                  <p>Through the program, students have the opportunity to gain access to the Bronco Pantry, donated gift cards to local stores, and are offered individual consultation sessions to gain access to additional community resources. The Bronco Pantry regularly stocks non-perishable food items and fresh produce in partnership with the SCU Forge Garden.</p>
                 <h2><a href="https://www.getcalfresh.org/">CalFresh</a></h2>
                 <p>California's food stamps (SNAP) program</p>
                 <ol>
                   <li>Apply - Your county will call you within a week or two for an eligibility interview</li>
                   <li>Get money - If approved, you will get an EBT card for groceries within 10 days</li>
-                  <li>Buy groceries - EBT cards work in mos/t food stores and farmers’ markets</li>
+                  <li>Buy groceries - EBT cards work in most food stores and farmers’ markets</li>
                 </ol>
                 <p>What will you need?</p>
                 <ul>
@@ -134,13 +117,6 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="probootstrap-cta">
-      <div class="container">
-        <div class="row">
         </div>
       </div>
     </section>
@@ -170,7 +146,7 @@
             <div class="probootstrap-footer-widget">
               <h3>Contact Info</h3>
               <ul class="probootstrap-contact-info">
-                <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara CA 95053</span></li>
+                <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara, CA 95053</span></li>
                 <li><i class="icon-mail"></i><span>broncoshare@scu.edu</span></li>
 
               </ul>
@@ -180,7 +156,7 @@
         </div>
         <!-- END row -->
 
-      </div>
+
 
       <div class="probootstrap-copyright">
         <div class="container">
