--- a/offers.html
+++ b/offers.html
@@ -205,7 +205,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="offers.html">Offers</a></li>
             <li><a href="calendar.html">Calendar</a></li>
-            <li><a href="other-resources.html">Additional Resources</a></li>
+            <li><a href="other-resources.html">Other Resources</a></li>
             <li><a href="new-offer.html">Post an Offer</a></li>
           </ul>
         </div>
