--- a/other-resources.html
+++ b/other-resources.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Resources</title>
+  <title>Other Resources</title>
   <meta name="description" content="Free Bootstrap Theme by uicookies.com">
   <meta name="keywords"
     content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
@@ -85,10 +85,9 @@
             <div class="row probootstrap-gutter0">
               <div class="col-md-7 col-md-push-1  probootstrap-animate" id="probootstrap-content">
                 <h2><a href="https://www.scu.edu/sustainability/programs/theforge/">Forge Garden Farm Stand</a></h2>
-                <p>The Forge Garden Farm Stand is every Friday:
+                  <p>The Forge Garden Farm Stand is every Friday:
                   <br>-11:30 a.m. to 12:30 p.m. - Student Hour: Please provide valid student ID when shopping at the farm stand
-                  <br>-12:30 p.m. to 1:30 p.m. - Community Hour: All are welcome to shop the farm stand
-                </p>
+                  <br>-12:30 p.m. to 1:30 p.m. - Community Hour: All are welcome to shop the farm stand</p>
                 <p>The Forge Farm Stand provides affordable, Certified Organic produce grown in its ½ acre
                   garden. The Farm Stand is sliding scale, donation-based. This means you pay what you can
                   afford. No one will be turned away for lack of funds. The first hour of the farm stand is
@@ -98,22 +97,38 @@
                 <h2><a href="https://www.scu.edu/osl/food-insecurity-program/">SCU Food Insecurity Program</a></h2>
                   <p>Through the program, students have the opportunity to gain access to the Bronco Pantry, donated gift cards to local stores, and are offered individual consultation sessions to gain access to additional community resources. The Bronco Pantry regularly stocks non-perishable food items and fresh produce in partnership with the SCU Forge Garden.</p>
                 <h2><a href="https://www.getcalfresh.org/">CalFresh</a></h2>
-                <p>California's food stamps (SNAP) program</p>
-                <ol>
-                  <li>Apply - Your county will call you within a week or two for an eligibility interview</li>
-                  <li>Get money - If approved, you will get an EBT card for groceries within 10 days</li>
-                  <li>Buy groceries - EBT cards work in most food stores and farmers’ markets</li>
-                </ol>
-                <p>What will you need?</p>
-                <ul>
-                  <li>A copy of your ID
-                  <li>Proof of any income
-                  <li>Proof of immigration status (for non-citizens)
+                  <p>California's food stamps (SNAP) program</p>
+                  <ol>
+                    <li>Apply - Your county will call you within a week or two for an eligibility interview</li>
+                    <li>Get money - If approved, you will get an EBT card for groceries within 10 days</li>
+                    <li>Buy groceries - EBT cards work in most food stores and farmers’ markets</li>
+                  </ol>
+                  <p>What will you need?</p>
+                  <ul>
+                    <li>A copy of your ID
+                    <li>Proof of any income
+                    <li>Proof of immigration status (for non-citizens)
                   </ul>
-                    <h2><a href="https://eatfresh.org/">EatFresh.org</a></h2>
-                        <p>EatFresh.org is an online recipe and nutrition resource for anyone who wants to improve their health. EatFresh.org is a project of the California Department of Social Services SNAP-Ed program.
-                          <br>- Find healthy recipes for all food groups
-                          <br>- Find dietitian recommendations and advice</p>
+                <h2><a href="https://eatfresh.org/">EatFresh.org</a></h2>
+                  <p>EatFresh.org is an online recipe and nutrition resource for anyone who wants to improve their health. EatFresh.org is a project of the California Department of Social Services SNAP-Ed program.
+                  <br>- Find healthy recipes for all food groups
+                  <br>- Find dietitian recommendations and advice</p>
+                <h2><a href="https://www.shfb.org/">Second Harvest of Silicon Valley Food Bank</a></h2>
+                  <p>Call 800-984-3663</p>
+                  <p>1691 The Alameda, San Jose, CA 95126
+                  <br>One block off campus!</p>
+                </h2><a href="https://www.shfb.org/nutrition-center/recipes/">SHFB Recipe Page</a>
+                  <p>Find recipes for healthy and filling meals</p>
+                <h2>2-1-1</h2>
+                  <p>If you are in immediate need of food assistance, please dial 2-1-1 from a phone and
+                    speak with someone about services available in your area (2-1-1 is a three-digit
+                    dialing code, similar to 4-1-1). Lines are open 24 hours a day. Most but not all areas
+                    provide 2-1-1 phone support.</p>
+                <h2><a href="https://uvfm.org/santa-clara-saturdays">Franklin Sqaure Farmers Market</a></h2>
+                  <p>Saturdays
+                  <br>9am-1pm
+                  <br>950 Jackson St, Santa Clara, CA 95050</p>
+                <h2></h2>
               </div>
             </div>
           </div>
@@ -127,7 +142,6 @@
             <div class="probootstrap-footer-widget">
               <h3>About The Program</h3>
               <p>Bronco Share is a new method to address pervasive food insecurity at Santa Clara University.</p>
-
             </div>
           </div>
           <div class="col-md-3 col-md-push-1">
@@ -146,7 +160,8 @@
             <div class="probootstrap-footer-widget">
               <h3>Contact Info</h3>
               <ul class="probootstrap-contact-info">
-                <li><i class="icon-location2"></i> <span>500 El Camino Real, Santa Clara, CA 95053</span></li>
+                <li><i class="icon-location2"></i> <span>500 El Camino Real
+                  <br>Santa Clara, CA 95053</span></li>
                 <li><i class="icon-mail"></i><span>broncoshare@scu.edu</span></li>
 
               </ul>
